...
  const [reason, setReason] = useState<string>('');
  const [description, setDescription] = useState<string>('');
  const [errorMessage, setErrorMessage] = useState('');
  const { data: user } = useGetUser(route.params.reportedUserId);

  const onSubmit = () => {
    if (reason === 'Other' && description.length === 0) {
      setErrorMessage('If you select other, you must describe the reason');
      return;
    }

    if (reason.length === 0) {
      setErrorMessage('You must select a category');
...
              {errorMessage}
            </Text>
            <FormContainer>
              {reason === 'Other' && (
                <Input
                  labelSize={18}
                  placeholder="What are you trying to report?"
                  color="neutral600"
                  value={description}
                  numberOfLines={3}
                  error={!!errorMessage}
                  onChangeText={(text) => setDescription(text)}
                  maxLength={200}
...
