...
  ];

  return (
    <ModalBottom onBackButtonPress={closeModal} visible={visible}>
      <ContentContainer>
        <Link color="primary500" bold onPress={onBackButtonPress}>
          Close
        </Link>
        <RewardImageContainer>
          <RewardImage source={RewardIcon} />
        </RewardImageContainer>

        <TitleContainer>
          <Title size={27} align="center">
            {isWelcomeBack ? "Guess who's back!" : 'Welcome to WS Rewards!'}
          </Title>
        </TitleContainer>

        <SubtitleContainer>
          <Text mv={4} align="center" size={12}>
            {isWelcomeBack
...
