...
      venueName: entity.venueName,
      brandName: entity.brandName,
      profilePicture: entity.profilePicture,
      brandLogo: entity.logo,
      venueAddressStreet: entity.location,
      followers: entity.followers,
      following: entity.following,
    } as User;
  };

  // Convert EntitySearchResult to Whiskey type for HorizontalWhiskeyCard
  const convertToWhiskey = (entity: EntitySearchResult): Whiskey => ({
      id: entity.id,
...
  };

  return (
    <ModalBottom onBackButtonPress={handleClose} visible={visible}>
      <ContentContainer>
        <Link color="primary500" bold onPress={handleClose}>
          Cancel
        </Link>
        <Input
          icon="search"
          iconSize={25}
          placeholder={resolvePlaceholder()}
          value={search}
...
