...
  );

  return (
    !isLoading && (
      <>
        <TitleContainer>
          <Title size={18}>Latest Articles</Title>
          <Link
            testID={getTestId('go-to-articles')}
            onPress={goToArticles}
            color="primary500"
          >
            Go to Articles
          </Link>
        </TitleContainer>
...
