...
  }, [user?.id, userId]);

  const options = useMemo(
    () => [
      {
        title: 'Share',
        icon: 'share',
        action: handleShare,
      },
      ...(isAppAdmin && !isGuest
        ? [
          {
            title: 'QR Code',
...
          ItemSeparatorComponent={ItemSeparator}
          ListHeaderComponent={listHeaderComponent}
          ListEmptyComponent={listEmptyComponent}
          ListFooterComponent={<FooterLoader isLoading={isFetchingNextPage} />}
        />
      </SafeAreaView>
      {!isGuest && <BottomNavbar active="home" />}

      <OutsidePressHandler
        onOutsidePress={() => bottomSheetModalRef.current?.close()}
      >
        <MenuModal
          ref={bottomSheetModalRef}
...
