...
      <>
        <TitleContainer>
          <Title size={18} mv={8}>
            Related Articles
          </Title>
          <Link onPress={goToArticles} color="primary500">
            Return to Articles
          </Link>
        </TitleContainer>

        <HorizontalFlatList
          data={data?.items.filter((item) => item.id !== guide.id)}
          horizontal
...
