...
    deleteNotificationMutate({ id: notification.id });
  };
  return (
    <ScreenContainer>
      <ScreenPadding>
        <Header
          title="Notifications"
          action={deleteUserNotifications}
          actionText={flattedData.length > 0 ? 'Clear all' : ''}
          loading={deleteUserNotificationsIsLoading || isLoading}
        />
        <ContentContainer>
          {flattedData.length > 0 && (
...
                }
                renderItem={({ item, index }) => (
                  <>
                    {index === 0 &&
                      !getTimeAgo(item.createdAt).includes('days') && (
                        <Title size={18} align="left" mb={6}>
                          Today
                        </Title>
                      )}
                    {getTimeAgo(item.createdAt).includes('days') &&
                      !getTimeAgo(flattedData[index - 1]?.createdAt).includes(
                        'days'
                      ) && (
...
