...
  rules: string;
}

export const RewardList: React.FC<IResourceComponentsProps> = () => {
  const translate = useTranslate();
  const { tableProps } = useTable<IReward>({
    resource: 'reward',
    pagination: {
      mode: 'client',
    },
  });

  return (
...
